# tac

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  README  configure  configure.ac
doc/: .gitignore  bibliography.bib  memsty.sty  tac.tex
flex-bison/: .gitignore  Makefile.am  Makefile.in  tac.l  tac.ypp  tac.yy  tac_flex.ll
include/: error.hpp  instruction.hpp  interpreter.hpp  memmngr.hpp  scanner.hpp  symbol.hpp  table.hpp
src/: .gitignore  error.cpp  instruction.cpp  interpreter.cpp  main.cpp  memmngr.cpp  scanner.cpp  symbol.cpp  table.cpp
tests/: fibonacci.tac  printarr.tac  quicksort.tac
