dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.59)
AC_INIT(tac, 0.11, lhsantos@kuhp.kyoto-u.ac.jp)
AC_CANONICAL_SYSTEM
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE(subdir-objects)

AC_PROG_CXX
AX_CXX_COMPILE_STDCXX_11
AC_PROG_RANLIB
AM_PROG_LEX
AC_PROG_YACC

AC_OUTPUT(Makefile flex-bison/Makefile)
